--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML-list</title>
 </head>
+
 <body>
     <h1>HTML-List</h1>
+    <ul>
+        <li class="testLi">
+            item01
+        </li>
+        <li>item02</li>
+        <li>item03</li>
+    </ul>
+
+    <button class="btnDone">Done</button>
+
+    <ol>
+        <li>item01</li>
+        <li>item02</li>
+        <li>item03</li>
+    </ol>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/listManager.js"></script>
     
 </body>
+
 </html>
