click button to strike

--- a/index.html
+++ b/index.html
@@ -11,20 +11,14 @@
 <body>
     <h1>HTML-List</h1>
     <ul>
-        <li class="testLi">
-            item01
-        </li>
+        <li class="testLi">item01</li>
         <li>item02</li>
         <li>item03</li>
     </ul>
 
     <button class="btnDone">Done</button>
 
-    <ol>
-        <li>item01</li>
-        <li>item02</li>
-        <li>item03</li>
-    </ol>
+    
     <script src="js/jquery.min.js"></script>
     <script src="js/listManager.js"></script>
     
