--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </ul>
 
     <button class="btnDone">Done</button>
+    <button class="btnNotDone">NotDone</button>
 
     
     <script src="js/jquery.min.js"></script>
