implement click strike

--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 <body>
     <h1>HTML-List</h1>
     <ul>
-        <li class="testLi">item01</li>
-        <li>item02</li>
-        <li>item03</li>
+        <li class="testLi" id="ID1">item01</li>
+        <li id="ID2">item02</li>
+        <li id="ID3">item03</li>
     </ul>
 
-    <button class="btnDone">Done</button>
-    <button class="btnNotDone">NotDone</button>
-
-    
     <script src="js/jquery.min.js"></script>
     <script src="js/listManager.js"></script>
-    
+
 </body>
 
 </html>
