added click button delete items

--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML-list</title>
+    <title>DOM-JS-List</title>
 </head>
 
 <body>
-    <h1>HTML-List</h1>
+    <h2>DOM-JS-List</h2>
     <ul>
-        <li class="testLi" id="ID1">item01</li>
-        <li id="ID2">item02</li>
-        <li id="ID3">item03</li>
+        <li id="item1">
+            item01
+            <button id="btnDele1">X</button>
+        </li>
+        <li id="item2">
+            item02
+            <button id="btnDele2">X</button>
+        </li>
+        <li id="item3">
+            item03
+            <button id="btnDele3">X</button>
+        </li>
     </ul>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/listManager.js"></script>
-
 </body>
 
 </html>
