--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2>DOM-JS-List</h2>
+    <h2 id="h2Title">DOM-JS-List</h2>
     <ul>
         <li id="item1">
             item01
